feat: bonus completato

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1 class="main-title">Lampadina accesa o spenta</h1>
         <div class="main-img" >
             <img id="img-1" src="./img/white_lamp.png" alt="lampadina spenta">
+        </div>
+        <div class="btn">
             <button id="btn">accendi/spegni></button>
         </div>
     </div>
